tdf#86624 Forced update if it is a legend

This is may be a (less) dirty fix to force hard update if it is a legend.

Change-Id: Ia1e2fe830085e1c61b6b98dc711758a7abb6274f